--- a/style.css
+++ b/style.css
@@ -1,26 +1,34 @@
+body {
+  background-color: #1d2937;
+  color: #bcbab8;
+}
+
+a {
+  color: #bcbab8;
+}
+
 .header {
-  border: solid 1px black;
   grid-area: header;
 }
 
 .random {
-  border: solid 1px black;
   grid-area: random;
 }
 
 .curated {
-  border: solid 1px black;
   grid-area: curated;
 }
 
 .promoted {
-  border: solid 1px black;
   grid-area: promoted;
 }
 
 .footer {
-  border: solid 1px black;
   grid-area: footer;
+}
+
+h1 img {
+  vertical-align: middle;
 }
 
 .gallery img {
@@ -28,7 +36,14 @@
 }
 
 .description {
+  text-align: left;
+  padding: 5px;
   width: 95%;
+}
+
+.description h2 {
+  margin-top: 0.1 em;
+  margin-bottom: 0.1 em;
 }
 
 .container {
@@ -46,9 +61,13 @@
     "footer footer";
 }
 
+#randomLoading {
+  padding-top: 50px;
+}
+
 a[href*="steampowered.com/"] {
-  background:url(steamIcon.png) no-repeat right top;
-  background-size: 12px;
+  /* background:url(steamIcon.png) no-repeat right top; */
+  background:url(steamTest.png) no-repeat right top;
+  background-size: 14px;
   padding-right:15px;
-  margin-right:0.5em;
 }
