Improved loading icons Added promoted section

--- a/style.css
+++ b/style.css
@@ -17,19 +17,25 @@ a {
 
 #curated {
   background-color: #203a4c;
+  padding-top: 5px;
 }
 
-.curated {
+/* .curated {
   grid-area: curated;
+} */
+
+.curatedContainer {
+  grid-area: curatedContainer;
 }
 
 #promoted {
   background-color: #1d2937;
+
 }
 
-.promoted {
+/* .promoted {
   grid-area: promoted;
-}
+} */
 
 .footer {
   grid-area: footer;
@@ -67,11 +73,9 @@ h1 img {
   justify-content: center;
   justify-items: stretch;
   text-align: center;
-
   grid-template-areas: 
     "header header"
-    "random curated"
-    "random promoted"
+    "random curatedContainer"
     "footer footer";
 }
 
@@ -88,4 +92,41 @@ a[href*="steampowered.com/"] {
   background:url(steamTest.png) no-repeat right top;
   background-size: 14px;
   padding-right:15px;
+}
+
+.lds-facebook {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.lds-facebook div {
+  display: inline-block;
+  position: absolute;
+  left: 6px;
+  width: 13px;
+  background: #bcbab8;
+  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+}
+.lds-facebook div:nth-child(1) {
+  left: 6px;
+  animation-delay: -0.24s;
+}
+.lds-facebook div:nth-child(2) {
+  left: 26px;
+  animation-delay: -0.12s;
+}
+.lds-facebook div:nth-child(3) {
+  left: 45px;
+  animation-delay: 0;
+}
+@keyframes lds-facebook {
+  0% {
+    top: 6px;
+    height: 51px;
+  }
+  50%, 100% {
+    top: 19px;
+    height: 26px;
+  }
 }
