--- a/tinyslide.css
+++ b/tinyslide.css
@@ -116,7 +116,7 @@ p {
   padding: 0 1em;
   height: 2.5em;
   color: #000;
-  background: #66CCFF;
+  background: #bbb9b7;
   border-radius: 3px;
   border: 0;
 }
