--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@ a {
   grid-area: header;
 }
 
+.header h1 {
+  font-size: 2.5em;
+}
+
+.header h1 img {
+  vertical-align: middle;
+}
+
 .random {
   grid-area: random;
 }
@@ -20,30 +28,17 @@ a {
   padding-top: 5px;
 }
 
-/* .curated {
-  grid-area: curated;
-} */
-
 .curatedContainer {
   grid-area: curatedContainer;
 }
 
 #promoted {
   background-color: #1d2937;
-
 }
-
-/* .promoted {
-  grid-area: promoted;
-} */
 
 .footer {
   grid-area: footer;
   padding: 10px;
-}
-
-h1 img {
-  vertical-align: middle;
 }
 
 .gallery img {
